# STM32

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
01_app/: CMakeLists.txt  main.c
02_libs/: CMakeLists.txt
02_libs/CMSIS/: stm32f10x.h
03_hal/: CMakeLists.txt
03_hal/inc/: device.h  hal_gpio.h  hal_types.h  led_base.h  led_gpio.h
04_bsp/: CMakeLists.txt
04_bsp/inc/: board_device.h  board_init.h  bsp_led.h
04_bsp/src/: board_init.c  bsp_gpio.c  bsp_led.c  led_gpio.c
05_drivers/: CMakeLists.txt
05_drivers/inc/: drv_led.h
05_drivers/src/: drv_led.c
06_startup/: CMakeLists.txt
09_config/: CMakeLists.txt
09_config/linker/: stm32_flash.ld
10_build/: .ninja_deps  .ninja_log  CMakeCache.txt  STM32F103.hex  STM32F103.map  build.ninja  cmake_install.cmake  compile_commands.json
10_build/.cmake/api/v1/reply/: cache-v2-6b2e2a38632835f30b8d.json  cache-v2-c9c1dc70fa088eebf677.json  cache-v2-f68538fcfcfd871bf579.json  cmakeFiles-v1-08ad6864837c17ef6cbf.json  cmakeFiles-v1-42a11c4cc5f60dea76e4.json  cmakeFiles-v1-8a9c51b23e23ce481d7f.json  codemodel-v2-05f42ec3660bf6ed65e0.json  codemodel-v2-6de704ca8f569f8780f1.json  codemodel-v2-7556b9f337ddb5f7cc5c.json  directory-01_app-Debug-187c2af3183518abc7a9.json  directory-02_libs-Debug-e3f17649175c29917de4.json  directory-03_hal-Debug-bc21dcccec10f5b62682.json  directory-04_bsp-Debug-27d04948062149a683cb.json  directory-05_drivers-Debug-c115dbd5b70709fb798a.json  directory-06_startup-Debug-a9418d99da651a17e23b.json  directory-09_config-Debug-b516cf7ef17cec8d16cb.json  index-2026-06-20T09-39-56-0887.json  index-2026-06-20T10-56-08-0666.json  index-2026-06-24T14-39-32-0528.json  target-STM32F103.elf-Debug-84ec6a268d1fa16a53bf.json  target-STM32F103.elf-Debug-89433030e8ad5d7acb07.json  target-STM32F103.elf-Debug-c5dc49ea62b473d6f1b7.json  target-bsp-Debug-8035513c83bb72eae5d8.json  target-bsp-Debug-f4b64edfabfd8657e8a2.json  target-drivers-Debug-a5165de2abee99cb475c.json  target-flash-Debug-2dc9cc730f19b9633b1b.json  target-flash-Debug-95f96c05695c36c15b6f.json  target-startup-Debug-328cf688990761a7eeb5.json  target-startup-Debug-6703dafcbc78333539b8.json  (+3 more)
10_build/01_app/: STM32F103.elf  STM32F103.hex  cmake_install.cmake
10_build/02_libs/: cmake_install.cmake
10_build/03_hal/: cmake_install.cmake
10_build/04_bsp/: cmake_install.cmake
10_build/05_drivers/: cmake_install.cmake
10_build/06_startup/: cmake_install.cmake
10_build/09_config/: cmake_install.cmake
